--- a/5-chart/index.html
+++ b/5-chart/index.html
@@ -44,13 +44,13 @@
                   <polyline points="0,45 40,8 80,20 120,5 160,38 200,45 240,15">
                 </svg>
                 <div class="points">
-                  <div class="point-1"></div>
-                  <div class="point-2"></div>
-                  <div class="point-3"></div>
-                  <div class="point-4"></div>
-                  <div class="point-5"></div>
-                  <div class="point-6"></div>
-                  <div class="point-7"></div>
+                  <div class="point-1"><span class="tooltip">458 <span class="arrow"></span></span></div>
+                  <div class="point-2"><span class="tooltip">812 <span class="arrow"></span></span></div>
+                  <div class="point-3"><span class="tooltip">746 <span class="arrow"></span></span></div>
+                  <div class="point-4"><span class="tooltip">877 <span class="arrow"></span></span></div>
+                  <div class="point-5"><span class="tooltip">517 <span class="arrow"></span></span></div>
+                  <div class="point-6"><span class="tooltip">434 <span class="arrow"></span></span></div>
+                  <div class="point-7"><span class="tooltip">458 <span class="arrow"></span></span></div>
                 </div>
               </div>
               <div class="chart__data__lines--blue">
@@ -58,13 +58,13 @@
                   <polyline points="0,10 40,0, 80,17, 120,5, 160,12 200,25 240,15">
                 </svg>
                 <div class="points">
-                  <div class="point-1"></div>
-                  <div class="point-2"></div>
-                  <div class="point-3"></div>
-                  <div class="point-4"></div>
-                  <div class="point-5"></div>
-                  <div class="point-6"></div>
-                  <div class="point-7"></div>
+                  <div class="point-1"><span class="tooltip">26 <span class="arrow"></span></span></div>
+                  <div class="point-2"><span class="tooltip">41 <span class="arrow"></span></span></div>
+                  <div class="point-3"><span class="tooltip">22 <span class="arrow"></span></span></div>
+                  <div class="point-4"><span class="tooltip">36 <span class="arrow"></span></span></div>
+                  <div class="point-5"><span class="tooltip">25 <span class="arrow"></span></span></div>
+                  <div class="point-6"><span class="tooltip">13 <span class="arrow"></span></span></div>
+                  <div class="point-7"><span class="tooltip">20 <span class="arrow"></span></span></div>
                 </div>
               </div>
             </div>
