(feat) Changed 100 to 1000, slightly increased space between lines and centered the main text

--- a/1-start/index.html
+++ b/1-start/index.html
@@ -13,9 +13,10 @@
                     <div class="one-front"></div>
                     <div class="zero--one"></div>
                     <div class="zero--two"></div>
+                    <div class="zero--three"></div>
                 </div>
-                <div class="days">
-                    days
+                <div class="day">
+                    day
                 </div>
                 <div class="title">
                     css challenge
