(feat) Added a fourth bar ('bars__fourth') with animation matching the already existing bars

--- a/2-hamburger/index.html
+++ b/2-hamburger/index.html
@@ -13,6 +13,7 @@
                 <div class="bars__first no-anim"></div>
                 <div class="bars__second no-anim"></div>
                 <div class="bars__third no-anim"></div>
+                <div class="bars__fourth no-anim"></div>
             </div>
         </div>
     </div>
