(feat) Reversed the direction the sun and shadows move and added divs with classes: 'left-eyebrow', 'left-eye', 'right-eyebrow', 'right-eye', and 'mouth' inside of the div class 'sun'

--- a/3-pyramid/index.html
+++ b/3-pyramid/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="main">
-      <div class="sun"></div>
+      <div class="sun"><div class="left-eyebrow"></div><div class="left-eye"></div><div class="right-eyebrow"></div><div class="right-eye"></div><div class="mouth"></div></div>
       <div class="pyramid"></div>
       <div class="pyramid-right"></div>
       <div class="sand"></div>
